# Biology

./: main.py  molecule_DNN_finetune.ipynb  pyproject.toml
Data/: All_iScore.csv  predictions_All_iScore_finetuned_test.csv
