[project]
name = "biology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.10.0",
    "notebook>=7.4.2",
    "numpy===1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.6.1",
    "tensorflow==2.18.0",
    "xgboost==2.0.3",
]
